fix: footer alignment

--- a/components/Footer.module.scss
+++ b/components/Footer.module.scss
@@ -19,8 +19,8 @@
         color: var(--color-grey);
     }
 
-    @media (max-width: 768px) {
-        font-size: 12px;
+    @media (max-width: 1050px) {
+        font-size: 18px;
     }
 }
 
@@ -77,7 +77,8 @@
     letter-spacing: 0.07rem;
     text-align: flex-start;
 
-    @media (max-width: 748px) {
+    @media (max-width: 1050px) {
+        font-size: 36px;
         text-align: center;
     }
 }
@@ -102,17 +103,17 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-size: 16px;
+        font-size: 18px;
         gap: 2rem;
         margin-top: 1rem;
         margin-bottom: 4rem;
     }
 
     @media (max-width: 768px) {
-        font-size: 12px;
+        font-size: 18px;
         gap: 2rem;
-        margin-top: 1rem;
-        margin-bottom: 4rem;
+        margin-top: 2rem;
+        margin-bottom: 5rem;
     }
 }
 
